--- a/front-end/src/Css/main.css
+++ b/front-end/src/Css/main.css
@@ -73,7 +73,7 @@ body {
 }
 
 .hero {
-  background-image: url('../Assets/img/bank-tree.jpeg');
+  background-image: url('../../public/img/bank-tree.jpeg');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
